--- a/contactstyle.css
+++ b/contactstyle.css
@@ -1,8 +1,8 @@
 body
 {
 background-color:white;
-font-family:"Georgia";
-font-size:30px;
+font-family:"helvetica";
+font-size:22px;
 }
 
 .Contact-us {  
