--- a/peacefinder-master/main.css
+++ b/peacefinder-master/main.css
@@ -1,6 +1,5 @@
-body
-{
-background-color:#cce6ff;
+body {
+background-color:#white;
 font-family:"helvetica";
 font-size:18px;
 }
@@ -11,7 +10,7 @@ font-size:18px;
  }
 .Contact {
 	text-align: center;
-	 padding: 40px 0;
+	 padding: 40px;
 }
 
 .form-group {
@@ -19,9 +18,6 @@ font-size:18px;
 }
 
 .carousel-inner img {
-  width: 50%;
-	height: 20em;
-  object-fit: cover;
   overflow: hidden;
 	margin: auto;
 }
@@ -29,4 +25,11 @@ font-size:18px;
 .carousel-inner > .item > img {
 	width: 640px;
 	height: 360px;
+}
+
+p {
+	padding-left: 10px;
+	padding-top: 0px;
+	padding right: 10px;
+	padding-bottom: 10px;
 }
